--- a/index.css
+++ b/index.css
@@ -52,13 +52,39 @@ button {
 }
 
 .buttonC {
+    background: none;
+    overflow: hidden;
+    color: black;
+    border: 3px solid black;
+    transition: all 0.3s;
+}
+.buttonC:hover {
+    color: white;
+}
+.buttonC:before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 0;
+    top: 50%;
+    left: 50%;
+    background-color: black;
+    transition: all 0.3s;
+    transform: translateX(-50%) translateY(-50%);
+}
+.buttonC:hover:before {
+    width: 102%;
+}
+
+.buttonD {
     background-color: #f14444;
     border: none;
     transform: translateX(0);
     overflow: hidden;
     color: white;
 }
-.buttonC:before {
+.buttonD:before {
     content: '';
     position: absolute;
     z-index: -1;
@@ -73,7 +99,7 @@ button {
     transition: all .5s;
     right: 0;
 }
-.buttonC:hover:before {
+.buttonD:hover:before {
     transform: rotate(30deg) scaleX(1) translateY(-114px);
     height: 281%;
     width: 250%;
