--- a/buttons.css
+++ b/buttons.css
@@ -1,3 +1,13 @@
+header {
+    padding: 24px;
+    text-align: center;
+}
+h1 {
+    margin: 0;
+    font-weight: normal;
+    font-size: 3em;
+}
+
 button {
     font-size: 24px;
     padding: 12px 30px;
