--- a/full_menu.css
+++ b/full_menu.css
@@ -2,12 +2,111 @@ body {
     margin: 0;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 header {
     padding: 24px;
     text-align: center;
+    border-bottom: 1px solid black;
 }
 h1 {
     margin: 0;
     font-weight: normal;
     font-size: 3em;
+    width: calc(100% - 50px);
+    display: inline-block;
+
+}
+p {
+    width: 50%;
+    margin: 0 auto;
+    padding: 50px 0;
+    border-bottom: 5px solid #eee;
+    font-size: 24px;
+}
+
+.menu-icon {
+    width: 50px;
+    height: 40px;
+    float: right;
+    margin-top: 8px;
+    position: relative;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.menu-icon span {
+    position: absolute;
+    left: 0;
+    border-radius: 8px;
+    width: 100%;
+    height: 8px;
+    background-color: red;
+    transition: all 0.3s;
+}
+
+.menu-icon span:nth-child(1) {
+    top: 0px;
+}
+.menu-icon span:nth-child(2) {
+    top: 16px;
+}
+.menu-icon span:nth-child(3) {
+    top: 16px;
+}
+.menu-icon span:nth-child(4) {
+    bottom: 0px;
+}
+
+.menu-icon.open span:nth-child(1) {
+    top: 16px;
+    left: 50%;
+    width: 0;
+    opacity: 0;
+}
+.menu-icon.open span:nth-child(2) {
+    transform: rotate(45deg);
+}
+.menu-icon.open span:nth-child(3) {
+    transform: rotate(-45deg);
+}
+.menu-icon.open span:nth-child(4) {
+    bottom: 24px;
+    left: 50%;
+    width: 0;
+    opacity: 0;
+}
+
+#menu1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: .4s;
+    background-color: rgba(0,0,0,0.95);
+    color: #fff;
+}
+#menu1.open {
+    opacity: 1;
+    visibility: visible;
+}
+#menu1 ul {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding: 0;
+    margin-top: 80px;
+}
+#menu1 li {
+    font-size: 36px;
+    margin-bottom: 24px;
+}
+#menu1 a {
+    color: #fff;
+    text-decoration: none;
 }
