Lower heading size on small screens

--- a/background_video.css
+++ b/background_video.css
@@ -90,3 +90,9 @@ header .title:hover {
       left: -108%;
   }
 }
+
+@media screen and (max-width: 480px) {
+    .video-section .heading {
+        font-size: 48px;
+    }
+}
