Remove button outline on focus

--- a/background_video.css
+++ b/background_video.css
@@ -24,6 +24,9 @@ header .title {
 header .title:hover {
     text-decoration: underline;
 }
+button:focus {
+    outline: none;
+}
 
 .scroll {
     color: #D32F2F;
